--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP3h1mlvDGZranduBud5EJW",
+      "authorship_tag": "ABX9TyOTPlG/R6YaitA9UjpnHlK1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,12 +98,12 @@
       ],
       "metadata": {
         "id": "wlXOl_Holz6M",
-        "outputId": "1e18c5b2-5fb0-4c44-abef-ad9aa775871e",
+        "outputId": "05055ea8-7d94-4976-ef52-41da2fa54de4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "54a8hhq8l2AK"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "HrCBq56i3sVW"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -226,7 +226,7 @@
       "metadata": {
         "id": "e1yPmU17vYrs"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -256,12 +256,13 @@
       ],
       "metadata": {
         "id": "tfnZyAI5nVL0",
-        "outputId": "95c3f41f-25be-4ffa-b54c-15295381cf59",
+        "outputId": "b6a3ee76-3af1-4dd5-f852-fa636850d0df",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -293,12 +294,13 @@
       ],
       "metadata": {
         "id": "ND78M8VHnj7w",
-        "outputId": "0a49ec75-0a23-4825-8ee2-3ba87c5dc195",
+        "outputId": "5cf08273-1cdb-4cc2-acc2-99a44a349554",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -343,7 +345,7 @@
       "metadata": {
         "id": "-04BquM1nbe4"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -362,12 +364,13 @@
       ],
       "metadata": {
         "id": "uLYCNOICACwv",
-        "outputId": "733291a7-9adf-43fe-feef-68e6ac25ca35",
+        "outputId": "cec0b3d6-3965-49e5-f566-f9d81253468d",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -504,7 +507,7 @@
       "metadata": {
         "id": "QW0r77mzsKad"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -532,12 +535,12 @@
       ],
       "metadata": {
         "id": "0TL0qt6iG4j2",
-        "outputId": "3828dafa-4295-4f8c-8c14-60ebfd7ba36f",
+        "outputId": "26b5f5b2-ea55-420e-b25f-782389acc3f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,7 +566,7 @@
       "metadata": {
         "id": "uazDFnOxHTvq"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -588,12 +591,12 @@
       ],
       "metadata": {
         "id": "-2xSmTDYHlTL",
-        "outputId": "c86508d3-7f21-4046-9949-e4a2244db96b",
+        "outputId": "4097f5b6-3b81-486c-a329-4dccedad3aaa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -604,7 +607,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 12
         }
       ]
     },
@@ -682,7 +685,7 @@
       "metadata": {
         "id": "iBDqtgUpOBQG"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -741,7 +744,7 @@
       "metadata": {
         "id": "WcuFhCxbL1aK"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -879,7 +882,7 @@
       "metadata": {
         "id": "nh0vG1bqPtWf"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -888,10 +891,26 @@
         "subsequent_mask(2) # 1, L, L"
       ],
       "metadata": {
-        "id": "Iuq-8GSWQXlP"
+        "id": "Iuq-8GSWQXlP",
+        "outputId": "b3cfb101-c086-477b-cdb5-9f9b4c864815",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ True, False],\n",
+              "         [ True,  True]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -915,33 +934,40 @@
         "torch.manual_seed(13)\n",
         "\n",
         "decoder = Decoder(n_heads=3, d_model=2, ff_units=10, n_features=2)\n",
-        "decoder.init_keys(decoder)\n",
+        "decoder.init_keys(encoder_states)\n",
         "\n",
         "query = shifted_seq\n",
         "decoder_output = decoder(query, target_mask=subsequent_mask(2))\n",
         "\n",
-        "decoder_output.self_attention_heads.alphas"
+        "decoder.self_attention_heads.alphas"
       ],
       "metadata": {
         "id": "v8JKnoukC_Eo",
-        "outputId": "ce97742b-fc37-4799-d0f0-005b5ba75304",
+        "outputId": "85d41bc7-7fd0-4ad0-ba46-1718629fb8ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hidden: tensor([[[ 0.3105, -0.5263]]], grad_fn=<PermuteBackward0>)\n",
-            "Output: tensor([[[0.3205, 0.1144]]], grad_fn=<ViewBackward0>)\n",
-            "\n",
-            "Hidden: tensor([[[ 0.8898, -0.3653]]], grad_fn=<StackBackward0>)\n",
-            "Output: tensor([[[0.2230, 0.4052]]], grad_fn=<ViewBackward0>)\n",
-            "\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[0.4743, 0.5257],\n",
+              "          [0.4011, 0.5989]]],\n",
+              "\n",
+              "\n",
+              "        [[[0.7748, 0.2252],\n",
+              "          [0.4264, 0.5736]]],\n",
+              "\n",
+              "\n",
+              "        [[[0.5950, 0.4050],\n",
+              "          [0.6304, 0.3696]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
         }
       ]
     },
@@ -956,7 +982,29 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "The only difference between training and evaluation, concerning the target mask, is that we’ll use larger masks as we go.\n",
+        "\n",
+        "The very first mask is actually trivial since\n",
+        "there are no elements above the diagonal:\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "1^{\\text{st}}\\ \\text{Step}\n",
+        "\\Large\n",
+        "\\begin{cases}\n",
+        "\\begin{array}{c|cc}\n",
+        "& \\text{source}\\\\\n",
+        "\\text{target}& \\color{red}{x_1} & \\\\\n",
+        "\\hline\n",
+        " \\color{green}{h_2} & \\alpha_{\\color{green}{2}\\color{red}1}\n",
+        "\\end{array}\n",
+        "\\end{cases}\n",
+        "$$\n",
+        "\n",
+        "At evaluation / prediction time we only have the source sequence, and, in our\n",
+        "example, we use its last element as input for the decoder:"
+      ],
       "metadata": {
         "id": "siOJmxzOR4Kq"
       }
@@ -964,46 +1012,208 @@
     {
       "cell_type": "code",
       "source": [
-        "# Initial hidden state will be encoder's final hidden state\n",
-        "decoder.init_hidden(hidden_seq)\n",
-        "# Initial data point is the last element of source sequence\n",
         "inputs = source_seq[:, -1:]\n",
-        "\n",
-        "teacher_forcing_prob = 0.5\n",
-        "target_len = 2\n",
-        "for i in range(target_len):\n",
-        "  print(f\"Hidden: {decoder.hidden_state}\")\n",
-        "  # Predicts coordinates\n",
-        "  outputs = decoder(inputs)\n",
-        "  print(f\"Output: {outputs}\\n\")\n",
-        "  # If it is teacher forcing\n",
-        "  if torch.rand(1) <= teacher_forcing_prob:\n",
-        "    # Takes the actual element\n",
-        "    inputs = target_seq[:, i: i + 1]  # Inputs to the next step are not predictions anymore\n",
-        "  else:\n",
-        "    # Otherwise uses the last predicted output\n",
-        "    inputs = outputs"
+        "target_mask = subsequent_mask(1)\n",
+        "output = decoder(inputs, target_mask)\n",
+        "output"
       ],
       "metadata": {
-        "id": "U7THbRPfR4tO",
-        "outputId": "ab8a8e9e-182f-4459-d6d4-bb439ba5b88a",
+        "id": "HUPFmXhccWsA",
+        "outputId": "4039b9fb-ad4a-4a6b-c30f-e223dbf02756",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hidden: tensor([[[ 0.3105, -0.5263]]], grad_fn=<PermuteBackward0>)\n",
-            "Output: tensor([[[0.3205, 0.1144]]], grad_fn=<ViewBackward0>)\n",
-            "\n",
-            "Hidden: tensor([[[ 0.8898, -0.3653]]], grad_fn=<StackBackward0>)\n",
-            "Output: tensor([[[0.2230, 0.4052]]], grad_fn=<ViewBackward0>)\n",
-            "\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0.4132, 0.3728]]], grad_fn=<ViewBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The mask is not actually masking anything in this case, and we get a prediction for the coordinates of $x_2$ as expected.\n",
+        "\n",
+        "Previously, this prediction would have been used\n",
+        "as the next input, but things are a bit different now.\n",
+        "\n",
+        ">The self-attention decoder expects the full sequence as \"query,\"\n",
+        "so we concatenate the prediction to the previous \"query.\""
+      ],
+      "metadata": {
+        "id": "edgTkjYudpsn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inputs = torch.cat([inputs, output[:, -1:, :]], dim=-2)\n",
+        "inputs"
+      ],
+      "metadata": {
+        "id": "4eWomOyMdUNZ",
+        "outputId": "e5ee0da5-bf31-48cb-aca1-bb0aa86ab35a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-1.0000,  1.0000],\n",
+              "         [ 0.4132,  0.3728]]], grad_fn=<CatBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now there are two data points for querying the decoder, so we adjust the mask\n",
+        "accordingly:\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "2^{\\text{nd}}\\ \\text{Step}\n",
+        "\\Large\n",
+        "\\begin{cases}\n",
+        "\\begin{array}{c|cc}\n",
+        "& \\text{source}\\\\\n",
+        "\\text{target}& \\color{red}{x_1} & \\color{green}{x_2} \\\\\n",
+        "\\hline\n",
+        " \\color{green}{h_2} & \\alpha_{\\color{green}{2}\\color{red}1} & 0 \\\\\n",
+        " \\color{green}{h_3} & \\alpha_{\\color{green}{3}\\color{red}1} & \\alpha_{{\\color{green}{3}\\color{green}2}}\n",
+        "\\end{array}\n",
+        "\\end{cases}\n",
+        "$$\n",
+        "\n",
+        ">The mask guarantees that the predicted $x_2$ (in the first step)\n",
+        "won’t change the predicted $x_2$ (in the second step), because\n",
+        "predictions are made based on past data points only."
+      ],
+      "metadata": {
+        "id": "kApP-vPZeHH7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "target_mask = subsequent_mask(2)\n",
+        "output = decoder(inputs, target_mask)\n",
+        "output"
+      ],
+      "metadata": {
+        "id": "yEVO9fKeeHm9",
+        "outputId": "26fcd81e-c0cf-4c71-a3cb-56a1758bb8fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0.4133, 0.3728],\n",
+              "         [0.4132, 0.3728]]], grad_fn=<ViewBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "These are the predicted coordinates of both $x_2$ and $x_3$. They are very close to each other, but that’s just because we’re using an untrained model to illustrate the mechanics of using target masks for prediction.\n",
+        "\n",
+        "The last prediction is, once again, concatenated to the previous \"query.\""
+      ],
+      "metadata": {
+        "id": "ho4YIihFfqiF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inputs = torch.cat([inputs, output[:, -1:, :]], dim=-2)\n",
+        "inputs"
+      ],
+      "metadata": {
+        "id": "J57OA_2Yf1Lk",
+        "outputId": "34b0dbc2-121b-4766-f63b-8da1da052977",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-1.0000,  1.0000],\n",
+              "         [ 0.4132,  0.3728],\n",
+              "         [ 0.4132,  0.3728]]], grad_fn=<CatBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "But, since we’re actually done with the predictions (the desired target sequence has\n",
+        "a length of two), we simply exclude the first data point in the query (the one coming\n",
+        "from the source sequence), and are left with the predicted target sequence:"
+      ],
+      "metadata": {
+        "id": "VHY5QgWQgF10"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inputs[:, 1:]"
+      ],
+      "metadata": {
+        "id": "U7THbRPfR4tO",
+        "outputId": "3493f656-5cd9-4781-c577-e91464dc5407",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0.4132, 0.3728],\n",
+              "         [0.4132, 0.3728]]], grad_fn=<SliceBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
         }
       ]
     },
