--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOTPlG/R6YaitA9UjpnHlK1",
+      "authorship_tag": "ABX9TyM9jMS4Xyt0lYfmgFo8UFcW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,7 +103,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "54a8hhq8l2AK"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "HrCBq56i3sVW"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +226,7 @@
       "metadata": {
         "id": "e1yPmU17vYrs"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,11 +258,10 @@
         "id": "tfnZyAI5nVL0",
         "outputId": "b6a3ee76-3af1-4dd5-f852-fa636850d0df",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -296,11 +295,10 @@
         "id": "ND78M8VHnj7w",
         "outputId": "5cf08273-1cdb-4cc2-acc2-99a44a349554",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -345,7 +343,7 @@
       "metadata": {
         "id": "-04BquM1nbe4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -366,11 +364,10 @@
         "id": "uLYCNOICACwv",
         "outputId": "cec0b3d6-3965-49e5-f566-f9d81253468d",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -507,7 +504,7 @@
       "metadata": {
         "id": "QW0r77mzsKad"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -540,7 +537,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +563,7 @@
       "metadata": {
         "id": "uazDFnOxHTvq"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -596,7 +593,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,7 +682,7 @@
       "metadata": {
         "id": "iBDqtgUpOBQG"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -744,7 +741,7 @@
       "metadata": {
         "id": "WcuFhCxbL1aK"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -882,7 +879,7 @@
       "metadata": {
         "id": "nh0vG1bqPtWf"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -897,7 +894,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -948,7 +945,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1024,7 +1021,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1066,7 +1063,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1124,7 +1121,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1163,7 +1160,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1202,7 +1199,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1229,22 +1226,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Now it is time to put the two of them together…\n",
+        "Let’s join the encoder and the decoder together again, each using self-attention to compute their corresponding \"hidden states,\" and the decoder using crossattention to make predictions.\n",
         "\n",
-        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/encoder_decoder.png?raw=1)\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/encdec_self_simplified.png?raw=1)\n",
         "\n",
-        "Let’s go over it once again:\n",
+        "But, if you prefer an even more simplified diagram, here it is:\n",
         "\n",
-        "* The encoder receives the source sequence ($x_0$ and $x_1$, in red) and generates the representation of the source sequence, its final hidden state ($h_f$, in blue).\n",
-        "* The decoder receives the hidden state from the encoder ($h_f$, in blue), together with the last known element of the sequence ($x_1$, in red), to output a hidden state ($h_2$, in green) that is converted into the first set of predicted coordinates($x_2$, in green) using a linear layer ($w^Th$, in green).\n",
-        "* In the next iteration of the loop, the model randomly uses the predicted ($x_2$, in green) or the actual ($x_2$, in red) set of coordinates as one of its inputs to output the second set of predicted coordinates ($x_3$), thus achieving the target length.\n",
-        "* The final output of the encoder + decoder model is the full sequence of\n",
-        "predicted coordinates: [$x_2$, $x_3$].\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/transf_encdecself.png?raw=1)\n",
         "\n",
-        "We can assemble the bits and pieces we’ve developed so far into a model that,\n",
-        "given the encoder and decoder models, implements a `forward()` method that splits\n",
-        "the input into the source and target sequences, loops over the generation of the\n",
-        "target sequence, and implements teacher forcing in training mode."
+        "The corresponding code for the architecture above looks like this:"
       ],
       "metadata": {
         "id": "_iwisxpbZXCd"
