--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM9jMS4Xyt0lYfmgFo8UFcW",
+      "authorship_tag": "ABX9TyOTABLL41PWLXSnogCqBHh2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1244,26 +1244,36 @@
       "cell_type": "code",
       "source": [
         "class EncoderDecoder(nn.Module):\n",
-        "  def __init__(self, encoder, decoder, input_len, target_len, teacher_forcing_prob=0.5):\n",
+        "  def __init__(self, encoder, decoder, input_len, target_len):\n",
         "    super().__init__()\n",
         "\n",
         "    self.encoder = encoder\n",
         "    self.decoder = decoder\n",
         "    self.input_len = input_len\n",
         "    self.target_len = target_len\n",
-        "    self.teacher_forcing_prob = teacher_forcing_prob\n",
-        "    self.outputs = None\n",
+        "    self.target_mask = self.subsequent_mask(self.target_len)\n",
         "\n",
-        "  def init_outputs(self, batch_size):\n",
-        "    device = next(self.parameters()).device\n",
-        "    # N, L (target), F\n",
-        "    self.outputs = torch.zeros(batch_size,\n",
-        "                               self.target_len,\n",
-        "                               self.encoder.n_features).to(device)\n",
+        "  @staticmethod\n",
+        "  def subsequent_mask(size):\n",
+        "    attention_shape = (1, size, size)\n",
         "\n",
-        "  def store_output(self, idx, output):\n",
-        "    # Stores the output\n",
-        "    self.outputs[:, idx: idx + 1, :] = output\n",
+        "    subsequent_mask = (1 - torch.triu(torch.ones(attention_shape), diagonal=1)).bool()\n",
+        "    return subsequent_mask\n",
+        "\n",
+        "  def encode(self, source_seq, source_mask):\n",
+        "    # Encodes the source sequence and uses the result to initialize the decoder\n",
+        "    encoder_states = self.encoder(source_seq, source_mask)\n",
+        "    self.decoder.init_keys(encoder_states)\n",
+        "\n",
+        "  def decode(self, shifted_target_seq, source_mask=None, target_mask=None):\n",
+        "    # Decodes/generates a sequence using the shifted (masked) target sequence - used in TRAIN mode\n",
+        "    outputs = self.decoder(shifted_target_seq, source_mask=source_mask, target_mask=target_mask)\n",
+        "    return outputs\n",
+        "\n",
+        "  def predict(self, source_seq, source_mask):\n",
+        "    # Decodes/generates a sequence using one input at a time - used in EVAL mode\n",
+        "    encoder_states = self.encoder(source_seq, source_mask)\n",
+        "    self.decoder.init_keys(encoder_states)\n",
         "\n",
         "  def forward(self, X):\n",
         "    # splits the data in source and target sequences\n",
