--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOTABLL41PWLXSnogCqBHh2",
+      "authorship_tag": "ABX9TyPlZAQ6B5wtWkjBUDH2K25I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1272,146 +1272,38 @@
         "\n",
         "  def predict(self, source_seq, source_mask):\n",
         "    # Decodes/generates a sequence using one input at a time - used in EVAL mode\n",
-        "    encoder_states = self.encoder(source_seq, source_mask)\n",
-        "    self.decoder.init_keys(encoder_states)\n",
-        "\n",
-        "  def forward(self, X):\n",
-        "    # splits the data in source and target sequences\n",
-        "    # the target seq will be empty in testing mode\n",
-        "    # N, L, F\n",
-        "    source_seq = X[:, : self.input_len, :]\n",
-        "    target_seq = X[:, self.input_len:, :]\n",
-        "    self.init_outputs(X.shape[0])\n",
-        "\n",
-        "    # Encoder expected N, L, F\n",
-        "    hidden_seq = self.encoder(source_seq)\n",
-        "    # Output is N, L, H\n",
-        "    self.decoder.init_hidden(hidden_seq)\n",
-        "\n",
-        "    # The last input of the encoder is also the first input of the decoder\n",
-        "    decoder_inputs = source_seq[:, -1:, :]\n",
-        "\n",
-        "    # Generates as many outputs as the target length\n",
+        "    inputs = source_seq[:, -1:]\n",
         "    for i in range(self.target_len):\n",
-        "      # Output of decoder is N, 1, F\n",
-        "      output = self.decoder(decoder_inputs)\n",
-        "      self.store_output(i, output)\n",
+        "      output = self.decode(inputs, source_mask, self.target_mask[:, :i + 1, :i + 1])\n",
+        "      output = torch.cat([inputs, output[:, -1:, :]], dim=-2)\n",
+        "      inputs = output.detach()\n",
+        "    outputs = inputs[:, 1:, :]\n",
+        "    return outputs\n",
         "\n",
-        "      prob = self.teacher_forcing_prob\n",
-        "      # In evaluation/test the target sequence is unknown, so we cannot use teacher forcing\n",
-        "      if not self.training:\n",
-        "        prob = 0\n",
+        "  def forward(self, X, source_mask=None):\n",
+        "    # Sends the mask to the same device as the inputs\n",
+        "    self.target_mask = self.target_mask.type_as(X).bool()\n",
+        "    # Slices the input to get source sequence\n",
+        "    source_seq = X[:, : self.input_len, :]\n",
+        "    # Encodes source sequence AND initializes decoder\n",
+        "    self.encode(source_seq, source_mask)\n",
         "\n",
-        "      # If it is teacher forcing\n",
-        "      if torch.rand(1) <= prob:\n",
-        "        # Takes the actual element\n",
-        "        decoder_inputs = target_seq[:, i: i + 1, :]\n",
-        "      else:\n",
-        "        # Otherwise uses the last predicted output\n",
-        "        decoder_inputs = output\n",
+        "    if self.training:\n",
+        "      # Slices the input to get the shifted target seq\n",
+        "      shifted_target_seq = X[:, self.input_len - 1:-1, :]\n",
+        "      # Decodes using the mask to prevent cheating\n",
+        "      output = self.decode(shifted_target_seq, source_mask, self.target_mask)\n",
+        "    else:\n",
+        "      # Decodes using its own predictions\n",
+        "      outputs = self.predict(source_seq, source_mask)\n",
         "\n",
-        "    return self.outputs"
+        "    return outputs"
       ],
       "metadata": {
         "id": "3j6coSQ3KXoY"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Let’s create an instance of the model."
-      ],
-      "metadata": {
-        "id": "cZxqSpBXLYQ_"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "encoder_decoder = EncoderDecoder(encoder, decoder, input_len=2, target_len=2, teacher_forcing_prob=0.5)"
-      ],
-      "metadata": {
-        "id": "PVz1tloOLbiF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "In training mode, the model expects the full sequence so it can randomly use\n",
-        "teacher forcing:"
-      ],
-      "metadata": {
-        "id": "8u9Zd7eSMllT"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "encoder_decoder.train()\n",
-        "encoder_decoder(full_seq)"
-      ],
-      "metadata": {
-        "id": "zfYuoj0oMnRG",
-        "outputId": "0b6e9244-25ad-4269-a103-4aabcca73e22",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[[0.3205, 0.1144],\n",
-              "         [0.2905, 0.1976]]], grad_fn=<CopySlices>)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 18
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "In evaluation / test mode, though, it only needs the source sequence as input:"
-      ],
-      "metadata": {
-        "id": "AS05-ItQM2sT"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "encoder_decoder.eval()\n",
-        "encoder_decoder(source_seq)"
-      ],
-      "metadata": {
-        "id": "_ooNCvYAM38u",
-        "outputId": "0ae8e8d8-8990-491c-8b11-9c759ab98907",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[[0.3205, 0.1144],\n",
-              "         [0.2905, 0.1976]]], grad_fn=<CopySlices>)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 19
-        }
-      ]
     },
     {
       "cell_type": "markdown",
